syntax = "proto2";

package model;

option java_multiple_files = true;
option java_package = "uc.mei.is.model.proto.prototypes";
option java_outer_classname = "Model";

message Student {
  required int32 id = 1;
  required int32 teacher = 2 ;

  required string name = 3;
  required int32 phoneNumber = 4;
  required string address = 5;
  required string gender = 6 ;
  required string birthDate = 7;
  required string registrationDate = 8;
}

message Teacher {
  required int32 id = 1;
  repeated int32 student = 2;

  required string name = 3;
  required int32 phoneNumber = 4;
  required string birthDate = 5;
  required string address = 6;
}

message School  {
  repeated Teacher teacher = 1;
  repeated Student student = 2;
}
